--- a/public_html/scss/styles.less
+++ b/public_html/scss/styles.less
@@ -246,7 +246,7 @@ a{
     position: absolute;
     top: -2px;
     clip: rect(0px,750px,250px,0px);
-    opacity: 0.8;
+    opacity: 0.7;
 }
 .ng-modal-data{
     padding: 20px 20px;
@@ -258,16 +258,15 @@ a{
 }
 
 .ng-modal-list{
-    overflow: hidden;
+    position: absolute;
     overflow-y: auto;
-    //max-width:500px;
-    max-height:300px;
-    padding-right: 17px;
+    top : 310px;
+    bottom: 15px;
+    width: 95%;
 }
 
 .ng-modal-row{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     
 }
 
